tests/parsing/smtlib/mcil/errors/230_define-system_bad_subsys_decl_2.expected
File "tests/parsing/smtlib/mcil/errors/230_define-system_bad_subsys_decl_2.mcil", line 1, character 29-30:
1 | (define-system sys :subsys (a))
                                 ^
Error while parsing a system declaration, read a closing parenthesis,
      but expected an instantiation of a defined transition system S of the
      form: (S input_arg_1 ... input_arg_N output_arg_1 ... output_arg_M).
